@@ -1,14 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST raspberrypi-image-3.10.38_pre-r20140427.tar.xz 10834816 SHA256 9f00d57e4f14233329f713110991b62b3c4cb22ae5024e82dd4a6856b5667dc3 SHA512 d61c6698a4b52b77a2967ea80766519db84f61388e7e32018a3ceb5f77d8bbee24f409a79bbbfbdace2dc154d873e8a5498f3b957db836fef43f6688de84d95d WHIRLPOOL ba21788cc709e0b6e8c1f286c8e213fad6221b6ef97db6ea3e80cf08370998c0224b0272216685eabd5ff2efdaac72e256655b395a5e3f1e7a4fce6691cc2d8f
-DIST raspberrypi-image-3.18.14_pre-r20150520.tar.xz 12998340 SHA256 f7d5400f06314cc174b3ff5ad57ac75bdff9d63c7a6aededfcc149bff4540eb6 SHA512 3e7721a207ea7f88e5e68af471c76948b68c1a92acb974a648b5e3ef911c63caa96646cb556323975cfce845576546812ef508bd711e674c3e0d98959e2010aa WHIRLPOOL 5bd3aa413d2f8a97ecce867780fe3a05eb28337e818335d26993db2fbabde78f9a3f64f37fe769dc1d9a73df908da473f6f61520cff40ee27edcec4464b6a1aa
-DIST raspberrypi-image-3.19.3_pre-r20150413.tar.xz 12976080 SHA256 e7cca8243839e80a6fe358c57289ba8c149bdd38e4f2e6a10c8d6f31b8da3743 SHA512 141e245273713f95f85c0c474fd0aaf9b01b67c412574756f6cf4d820013706160b872f0435fa139c96110c8a6b0f2d9b68f71e31ddf05964cb6fcf7014a960a WHIRLPOOL 3fe2fa6fb2284bd155458ee201130a9b3d6dc69a76033c6512f30963e3d379bbcc68e2701e8d60b88827fdbb498048934de624a0b859d468ad4b03f425679497
-DIST raspberrypi-image-4.0.4_pre-r20150523.tar.xz 13052304 SHA256 3cbe55ffccb6e7067f37b57a3bbcc7676ed89ae639f8663e17c94f0c8ec99d31 SHA512 c33517321769e5267d7084e82b54d9548bed77fed1755fd5985ac648cb5721fc462f2c062d0e003171eb4b0ccd3e5b0d7b41fc6783c6dd85f86089f54d8bbe60 WHIRLPOOL ef9359919e3da0de0edce3bacc16c70cb36fa66dc13051bde8c4dcb7c47782cd18fe8ed65ff992ae00454b109293ecbee4d71699adc78a7d17e903d1e91cd603
+DIST raspberrypi-image-3.18.14_pre-r20150605.tar.xz 12996508 SHA256 db48adac233520a4be721799d3a99f1606284b93d521dea7ba11eb5fb26d488d SHA512 8e8b2be60b6ddba00a5c50572182e232c306d5e0902ac4b54d44b33d69585ecf99ba522764d57531b1080bc033da0d4620f7f37585b431d7cf339aad7cc75cf5 WHIRLPOOL ea10778f32785bfa3a4374bae27db3bcda0dd5cf7cb423223d961f05da420d8e2e70516115595ecf0d695f58a88ea410767b765d5e1827272eb6c8c1a35ddf1a
+DIST raspberrypi-image-4.0.4_pre-r20150607.tar.xz 13057628 SHA256 949445576030cf09ab88a8697f53763a3610a008118422fda6b0ce484068a419 SHA512 2e597788ffff6bd387a3e81180e53e0f6668d1dd0202818d71cbf9247bc6e2e0e2b6b0c8f4cfedbaa2073a1ec45355cd4be85ff5daead23efad2f26b4e205408 WHIRLPOOL 0c8948208a4cc0fd0d04e46132888515a89ff1f7826314af660db0750f635e6723efb14d84d3656e0095bdbeea1cde4fe2a97ea4b2910a7622ca980c0fe0e6c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlVjsAEACgkQknrdDGLu8JDfXQD+K8GxA6Ew9rCESLbU/uE4OEC5
-hnxuSsP344LNgzTH/tMBAJe3dwz0NoInIW1naHKQK9vfm0/sO8IjARzzgoZePh8/
-=IhRs
+iF4EAREIAAYFAlV1XPAACgkQknrdDGLu8JB9MQEAhBdTwKVCDicwSUUXeKEMn2MA
+YMC94G8x5v3EOAMEvisBAJO88Pyzkg1fgL5NhCk8qzCUxweCBK0gGC4++pCyhyRl
+=heOx
 -----END PGP SIGNATURE-----
